fixed spacing on portfolio

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -124,7 +124,7 @@ h3{
 }
 
 
-.portfolio{
-  margin-top: 30px;
+.portfolio-header{
+  margin-bottom: 30px;
   
 }
